# haskell_playground

./: .dockerignore  .gitignore  .hlint  .travis.yml  Dockerfile  Main.hs  Playground.cabal  README.md  Spec.hs  cabal.sandbox.config.travis  docker-compose.yml  jenkins.sh  stack.yaml
resources/: DecodeTest.json  UVA10032.output  UVA10043.output  UVA10051.alt.output  UVA10051.input  UVA10054.output  UVA116.random.alt.output
resources/Ml/BackPropagation/: lines0.json  lines1.json  plot.py  points0.json  points1.json
resources/Ml/Perceptron/: plot.py
src/: BentleyOttmann.hs  BinTree.hs  Chaining.hs  Concur.hs  CutNode.hs  DFSBFS.hs  Debugger.hs  FloatingPointNumber.hs  IterateeFree.hs  IterateeNonWaitable.hs  IterateeWaitable.hs  Kopt.hs  LoopThings.hs  MST.hs  Main.hs  MonadTransformers.hs  NonWaitableIteratee.hs  P4_14.hs  SimpleIteratee.hs  SpecMain.hs  StateTFix.hs  StringConversions.hs  StringMatch.hs  UVA10054.hs  VacationCalculator.hs  Whatever.hs
src/DecodeJsonOnCompile/: Definitions.hs  Usage.hs
src/Extentions/: DataKinds.hs  GADTs.hs  QuasiQuoter.hs  QuasiQuotes.hs  TemplateHaskell.hs  TemplateHaskellAvoidStageRestriction.hs  TemplateHaskellTupleGetter.hs  TypeFamilies.hs
src/Ml/: BackPropagation.hs  Perceptron.hs
src/Puzzles/: Hooks2.hs
src/Uva/: P10003.hs  P10026.hs  P10032.hs  P10041.hs  P10043.hs  P10051.hs  P10054.hs  P10065.hs  P10084.hs  P10131.hs  P10152.hs  P10154.hs  P10181.hs  P10249.hs  P10261.hs  P116.hs
test/Uva/: P10054Spec.hs  P10065Spec.hs
tests/: Tests.hs
