name:                Playground
version:             0.1.0.0
license-file:        LICENSE
author:              Hiroshi Ogawa
maintainer:          hi.ogawa.zz@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable main
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind
  build-depends:       HUnit >= 1.2.5.2
                     , QuickCheck >= 2.8.1
                     , array >=0.5 && <0.6
                     , base >= 4 && < 5
                     , bytestring >= 0.10.6.0
                     , containers
                     , diffarray
                     , heaps
                     , hspec >= 2.0.2
                     , lens
                     , mtl >=2.2 && <2.3
                     , parsec
                     , text >= 1.2.1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

-- to be required in `test-suite spec`
library
  exposed-modules:     Uva.P10065, Uva.P10054
  ghc-options:         -Wall -fno-warn-unused-do-bind
  build-depends:       HUnit >= 1.2.5.2
                     , QuickCheck >= 2.8.1
                     , array >=0.5 && <0.6
                     , base >= 4 && < 5
                     , bytestring >= 0.10.6.0
                     , containers
                     , diffarray
                     , heaps
                     , hspec >= 2.0.2
                     , lens
                     , mtl >=2.2 && <2.3
                     , parsec
                     , text >= 1.2.1.3
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite spec
  type:                 exitcode-stdio-1.0
  main-is:              SpecMain.hs
  ghc-options:          -threaded -Wall -fno-warn-unused-do-bind
  build-depends:       HUnit >= 1.2.5.2
                     , QuickCheck >= 2.8.1
                     , array >=0.5 && <0.6
                     , base >= 4 && < 5
                     , bytestring >= 0.10.6.0
                     , containers
                     , diffarray
                     , heaps
                     , hspec >= 2.0.2
                     , lens
                     , mtl >=2.2 && <2.3
                     , parsec
                     , text >= 1.2.1.3
  hs-source-dirs:       src
  default-language:     Haskell2010
