name:                Playground
version:             0.1.0.0
author:              Hiroshi Ogawa
maintainer:          hi.ogawa.zz@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable playground-main
  hs-source-dirs:      .
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  default-language:    Haskell2010
  build-depends:       base >= 4 && < 5
                     , Playground

test-suite playground-spec
  hs-source-dirs:      .
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  default-language:    Haskell2010
  build-depends:       base >= 4 && < 5
                     , hspec
                     , Playground

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-unused-do-bind -fno-warn-type-defaults
  default-language:    Haskell2010

  exposed-modules:
                       -- uva problems
                       Uva.P10043
                     , Uva.P10054
                     , Uva.P10065
                     , Uva.P10249
                     , Uva.P10032
                     , Uva.P10131
                     , Uva.P10154
                     , Uva.P10181
                     , Uva.P10041
                     , Uva.P10051
                     , Uva.P10003
                     , Uva.P116
                     , Uva.P10261
                     , Uva.P10026
                     , Uva.P10152
                     , Uva.P10084

                       -- other algorithm problems
                     , Puzzles.Hooks2
                     , Kopt
                     , BentleyOttmann
                     , BinTree

                       -- play with extentions
                     , Extentions.QuasiQuotes
                     , Extentions.QuasiQuoter
                     , Extentions.TemplateHaskell
                     , Extentions.TemplateHaskellAvoidStageRestriction
                     , Extentions.TemplateHaskellTupleGetter
                     , DecodeJsonOnCompile.Usage
                     , DecodeJsonOnCompile.Definitions

                       -- others
                     , IterateeWaitable
                     , IterateeNonWaitable
                     , FloatingPointNumber
                     , StringConversions

  build-depends:       base >= 4 && < 5
                     , QuickCheck
                     , aeson
                     , array
                     , base-prelude
                     , bytestring
                     , containers
                     , diffarray
                     , heaps
                     , hmatrix
                     , hspec
                     , lens
                     , mtl
                     , parsec
                     , process
                     , random
                     , template-haskell
                     , text
                     , vector
                     , file-embed
                     , stm
